Adds -SNAPSHOT to Maven version parameter and few modifications to API