@@ -4,7 +4,7 @@
 package com.rogiel.httpchannel.filesonic;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import javax.xml.bind.JAXB;
 
@@ -16,7 +16,7 @@ import com.rogiel.httpchannel.filesonic.xml.FSUpload;
  * @author <a href="http://www.rogiel.com">Rogiel</a>
  */
 public class FileSonicAPI {
-	private static final String BASE_URL = "http://api.filesonic.com/";
+	private static final String BASE_URI = "http://api.filesonic.com/";
 
 	private String email;
 	private String password;
@@ -25,10 +25,10 @@ public class FileSonicAPI {
 		return id;
 	}
 
-	public URL getUploadURL() throws IOException {
-		return new URL(((FSGetUploadURL) execute(FSUpload.class,
+	public URI getUploadURI() throws IOException {
+		return URI.create((((FSGetUploadURL) execute(FSUpload.class,
 				"upload?method=getUploadUrl").getResponse()).getResponse()
-				.getUploadURL());
+				.getUploadURI()));
 	}
 
 	public long getMaxFilesize() throws IOException {
@@ -47,10 +47,10 @@ public class FileSonicAPI {
 		this.password = null;
 	}
 
-	private <T extends FSAPI> T execute(Class<T> type, String requestURL)
+	private <T extends FSAPI> T execute(Class<T> type, String requestURI)
 			throws IOException {
-		final URL url = new URL(BASE_URL + requestURL + "&u=" + email + "&p="
-				+ password + "&format=xml");
-		return JAXB.unmarshal(url.openStream(), type);
+		final URI uri = URI.create(BASE_URI + requestURI + "&u=" + email
+				+ "&p=" + password + "&format=xml");
+		return JAXB.unmarshal(uri.toURL().openStream(), type);
 	}
 }
